# nature-of-code-template

./: CMakeLists.txt  main.cpp
